index.html was updated

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h1>Invest in Everything</h1>
 </center>
 <center>
-<h3>Online platform to invest in stocks, derivatives, mutual funds, and more</h3>
+<h3>Online platform to invest in stocks, derivatives, mutual funds and more</h3>
 </center>
 <center>
 <button>Sign up Now</button>
